# CRAIS-PESU

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_old  README.md  data.json  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
crais/: settings.py  urls.py  wsgi.py
crais/base/: apps.py  models.py  wagtail_hooks.py
crais/base/migrations/: 0001_initial.py  0002_alter_aboutpage_body.py  0002_alter_formpage_general_information_and_more.py  0002_alter_formpage_thank_you_text.py  0002_contactpage.py  0002_homepage_highlight_image_homepage_highlight_text.py  0003_alter_homepageourwork_link.py  0003_contactpage_general_information.py  0003_homepage_highlight_link.py  0003_rename_about_us_homepage_about_us_body_and_more.py  0004_homepagecollaborations_dark_background.py  (+1 more)
crais/content/: apps.py  signals.py  urls.py  views.py
crais/courses/: apps.py  models.py
crais/events/: apps.py  models.py  signals.py
crais/news/: apps.py  models.py
crais/projects/: apps.py  models.py
crais/research/: apps.py  models.py
crais/settings/: base.py  dev.py
crais/templates/: _base.html  _footer.html  _navbar.html  test.html
crais/users/: apps.py  models.py
static/src/: input.css  output.css
tailwind/: package-lock.json  package.json  tailwind.config.js
tailwind/src/: main.css  navbar.css  rich_text.css  utils.css
templates/: 404.html  _base.html  _footer.html  _navbar.html
templates/_snippets/: _intro_section.html
templates/base/: about_page.html  contact_page.html  contact_page_landing.html  form_page.html  home_page.html  partial_form_page.html
templates/content/: courses_index_page.html  member_detail.html  news_index_page.html  news_page.html  patent_list.html  project_index_page.html  project_page.html  publication_list.html  team_page.html
templates/courses/: courses_index_page.html
templates/events/: event_page.html
templates/news/: news_index_page.html
templates/projects/: project_index_page.html  project_page.html
templates/research/: research_page.html
templates_old/: _base.html  _footer.html  _navbar.html  test.html
templates_old/_snippets/: _intro_section.html
templates_old/base/: about_page.html  form_page.html
templates_old/events/: event_index_page.html
templates_old/news/: news_index_page.html
(+96 files in other folders)
