[tool.poetry]
name = "crais-pesu"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanjnr44@gmail.com>"]
readme = "README.md"
packages = [{include = "crais_pesu"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
wagtail = "^4.1.1"
django-compressor = "^4.1"
django-crispy-forms = "^1.14.0"
crispy-tailwind = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
