[tool.poetry]
name = "crais-pesu"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanjnr44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-compressor = "^4.3.1"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
python-dotenv = "^1.0.0"
wagtail = "^5.0.2"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
