[tool.poetry]
name = "crais-pesu"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanjnr44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-compressor = "^4.3.1"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
python-dotenv = "^1.0.0"
wagtail = "^5.0.2"
whitenoise = "^6.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
pre-commit = "^3.3.3"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "DJ001", "DJ008",
    "RET504",
    "RUF005", "RUF012",
    "S311",
    "SIM102", "SIM108",
]
line-length = 120
select = ["ANN", "B", "C4", "D", "DJ", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]

[tool.ruff.per-file-ignores]
"crais/**/migrations/*.py" = ["ALL"]
"__init__.py" = ["F401", "F403"]
"manage.py" = ["T201"]

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
